--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,42 @@
 <div class="wallets-list" fxLayout="column" fxLayoutAlign="space-evenly stretch" >
   <router-outlet></router-outlet>
 </div>
+<button mat-fab color="primary" aria-label="Example icon button with a delete icon" style="position: fixed; bottom: 15px; right: 15px;" 
+data-toggle="modal" data-target="#exampleModal">
+  <mat-icon>add</mat-icon>
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Wallet Details</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form [formGroup]="formValue">
+          <div class="form-group">
+            <label for="walletName">Wallet Title</label>
+            <input type="text" formControlName="walletName" class="form-control" id="walletName" aria-describedby="walletName" placeholder="">
+            <!-- <small id="walletName" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
+          </div>
+          <div class="form-group">
+            <label for="ownerName">Owner Name</label>
+            <input type="text" formControlName="ownerName" class="form-control" id="ownerName" placeholder="">
+          </div>
+          <div class="form-group">
+            <label for="walletDescription">Wallet Description</label>
+            <textarea formControlName="walletDescription" class="form-control" id="walletDescription" rows="3"></textarea>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" id="cancel" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-success" (click)="postWalletDetails()">Add Wallet</button>
+      </div>
+    </div>
+  </div>
+</div>
