--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-  <span routerLink="/">My Economics</span>
+  <span routerLink="/">My Budget App</span>
   
   <span class="example-spacer"></span>
   
