working project with walletModel

--- a/src/app/components/wallets/wallets.component.html
+++ b/src/app/components/wallets/wallets.component.html
@@ -7,3 +7,47 @@
     <button mat-raised-button color="warn" (click)="deleteWallet(wallet)">Delete</button>
   </mat-card-actions>
 </mat-card>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Wallet Details</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form [formGroup]="formValue">
+          <div class="form-group">
+            <label for="walletName">Wallet Title</label>
+            <input type="text" formControlName="walletName" class="form-control" id="walletName" aria-describedby="walletName" placeholder="">
+            <!-- <small id="walletName" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
+          </div>
+          <div class="form-group">
+            <label for="ownerName">Owner Name</label>
+            <input type="text" formControlName="ownerName" class="form-control" id="ownerName" placeholder="">
+          </div>
+          <div class="form-group">
+            <label for="walletDescription">Wallet Description</label>
+            <textarea formControlName="walletDescription" class="form-control" id="walletDescription" rows="3"></textarea>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" id="cancel" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      
+        <button type="button" *ngIf="showAdd; else showUpdate" class="btn btn-success" (click)="postWalletDetails()">Add Wallet</button>
+        <ng-template #showUpdate>
+          <button type="button" class="btn btn-info text-white" (click)="updateWalletDetails()">Edit Wallet</button>
+        </ng-template>
+      </div>
+    </div>
+  </div>
+</div>
+
+<button (click)="clickAddWallet()" mat-fab color="primary" aria-label="Add buton" style="position: fixed; bottom: 15px; right: 15px;" 
+data-toggle="modal" data-target="#exampleModal">
+  <mat-icon>add</mat-icon>
+</button>
