Retrieving transactions per wallet

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,5 @@
 <app-header></app-header>
-<h1 class="wallets-title">My Wallets</h1>
-<div class="wallets-list" fxLayout="column" fxLayoutAlign="space-evenly stretch" >
+<div class="container" fxLayout="column" fxLayoutAlign="space-evenly stretch" >
   <router-outlet></router-outlet>
 </div>
 
