--- a/src/app/components/wallet-details/wallet-details.component.scss
+++ b/src/app/components/wallet-details/wallet-details.component.scss
@@ -51,3 +51,7 @@
   .example-headers-align .mat-form-field + .mat-form-field {
     margin-left: 8px;
   }
+
+  mat-expansion-panel {
+    margin: 1.5em 0;
+  }
