--- a/src/app/components/wallets/wallets.component.html
+++ b/src/app/components/wallets/wallets.component.html
@@ -1,53 +1,71 @@
-<mat-card *ngFor="let wallet of walletsData" class="wallets-item">
-  <mat-card-title>{{ wallet.name }}</mat-card-title>
-  <mat-card-subtitle>{{ wallet.description }}</mat-card-subtitle>
-  <button mat-stroked-button color="primary" routerLink="/wallets/{{ wallet.id }}" style="float:left">Open Wallet</button>
-  <mat-card-actions align="end" class="actions">
-    <button mat-button (click)="onEdit(wallet)" data-toggle="modal" data-target="#exampleModal" mat-stroked-button color="accent">Edit</button>
-    <button mat-raised-button color="warn" (click)="deleteWallet(wallet)">Delete</button>
-  </mat-card-actions>
-</mat-card>
-
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Wallet Details</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <form [formGroup]="formValue">
-          <div class="form-group">
-            <label for="walletName">Wallet Title</label>
-            <input type="text" formControlName="walletName" class="form-control" id="walletName" aria-describedby="walletName" placeholder="">
-            <!-- <small id="walletName" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
-          </div>
-          <div class="form-group">
-            <label for="ownerName">Owner Name</label>
-            <input type="text" formControlName="ownerName" class="form-control" id="ownerName" placeholder="">
-          </div>
-          <div class="form-group">
-            <label for="walletDescription">Wallet Description</label>
-            <textarea formControlName="walletDescription" class="form-control" id="walletDescription" rows="3"></textarea>
-          </div>
-        </form>
-      </div>
-      <div class="modal-footer">
-        <button type="button" id="cancel" class="btn btn-secondary" data-dismiss="modal">Close</button>
-      
-        <button type="button" *ngIf="showAdd; else showUpdate" class="btn btn-success" (click)="postWalletDetails()">Add Wallet</button>
-        <ng-template #showUpdate>
-          <button type="button" class="btn btn-info text-white" (click)="updateWalletDetails()">Edit Wallet</button>
-        </ng-template>
+<div class="wallets-list">
+  <h1 class="wallets-title">My Wallets</h1>
+  <div class="container-fluid">
+    <!-- Search Bar-->
+    <div  class="col-md-12">
+      <div class="row">
+          <form>
+            <div class="form-group">
+              <label for="searchForWallet">Search Wallet</label>
+              <input type="text" class="form-control" [(ngModel)]="walletWord" name="walletWord" id="searchForWallet" aria-describedby="searchWallet">
+              <small id="searchWallet" class="form-text text-muted">Type the name of desired wallet</small>
+            </div>
+          </form>
       </div>
     </div>
+  
+    <mat-card *ngFor="let wallet of walletsData | filter : walletWord" class="wallets-item">
+      <mat-card-title>{{ wallet.name }}</mat-card-title>
+      <mat-card-subtitle>{{ wallet.description }}</mat-card-subtitle>
+      <button mat-stroked-button color="primary" routerLink="/wallets/{{ wallet.id }}" style="float:left">Open Wallet</button>
+      <mat-card-actions align="end" class="actions">
+        <button mat-button (click)="onEdit(wallet)" data-toggle="modal" data-target="#exampleModal" mat-stroked-button color="accent">Edit</button>
+        <button mat-raised-button color="warn" (click)="deleteWallet(wallet)">Delete</button>
+      </mat-card-actions>
+    </mat-card>
+  
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Wallet Details</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <form [formGroup]="formValue">
+              <div class="form-group">
+                <label for="walletName">Wallet Title</label>
+                <input type="text" formControlName="walletName" class="form-control" id="walletName" aria-describedby="walletName" placeholder="">
+                <!-- <small id="walletName" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
+              </div>
+              <div class="form-group">
+                <label for="ownerName">Owner Name</label>
+                <input type="text" formControlName="ownerName" class="form-control" id="ownerName" placeholder="">
+              </div>
+              <div class="form-group">
+                <label for="walletDescription">Wallet Description</label>
+                <textarea formControlName="walletDescription" class="form-control" id="walletDescription" rows="3"></textarea>
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button type="button" id="cancel" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          
+            <button type="button" *ngIf="showAdd; else showUpdate" class="btn btn-success" (click)="postWalletDetails()">Add Wallet</button>
+            <ng-template #showUpdate>
+              <button type="button" class="btn btn-info text-white" (click)="updateWalletDetails()">Edit Wallet</button>
+            </ng-template>
+          </div>
+        </div>
+      </div>
+    </div>
+  
+    <button (click)="clickAddWallet()" mat-fab color="primary" aria-label="Add buton" style="position: fixed; bottom: 15px; right: 15px;" 
+    data-toggle="modal" data-target="#exampleModal">
+      <mat-icon>add</mat-icon>
+    </button>
   </div>
 </div>
-
-<button (click)="clickAddWallet()" mat-fab color="primary" aria-label="Add buton" style="position: fixed; bottom: 15px; right: 15px;" 
-data-toggle="modal" data-target="#exampleModal">
-  <mat-icon>add</mat-icon>
-</button>
