--- a/src/app/components/wallet-details/wallet-details.component.scss
+++ b/src/app/components/wallet-details/wallet-details.component.scss
@@ -10,7 +10,7 @@
     margin-top: 20px;
     margin-right: .5rem;
     background-color: #eee;
-    padding: 1rem;
+    // padding: 1rem;
     border-radius: 4px;
     font-size: 1rem;
   }
@@ -24,6 +24,8 @@
   }
   
   .example-card {
+    text-transform: uppercase;
+    margin: 2em 0;
     width: 90%;
   }
   
@@ -55,3 +57,11 @@
   mat-expansion-panel {
     margin: 1.5em 0;
   }
+
+  .example-container .mat-form-field + .mat-form-field {
+    margin-left: 8px;
+  }
+
+.go-back-btn {
+  padding: 10px;
+}
